--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
     <nav>
         <div class="container">
-            <ul>
+            <button class="menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="menu">
                 <li><a href="#what-is-ai">Что такое ИИ?</a></li>
                 <li><a href="#how-it-works">Как работает?</a></li>
                 <li><a href="#examples">Примеры</a></li>
